<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".P3_Lugar_Elegido">

    <ImageView
        android:id="@+id/imgVw_img_seleccionada"
        android:layout_width="259dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtVw_img_pasada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVw_img_seleccionada"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/txtVw_img_pasada_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3_puntuacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_img_pasada"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/txtVw_img_pasada_descripcion"
        android:layout_width="343dp"
        android:layout_height="184dp"
        android:text="@string/p3_descripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_img_pasada_puntuacion"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3_btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_img_pasada_descripcion"
        app:layout_constraintVertical_bias="0.703" />

    <Button
        android:id="@+id/btn_puntuar_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3_btn_puntuar_y_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_img_pasada_descripcion"
        app:layout_constraintVertical_bias="0.703" />
</androidx.constraintlayout.widget.ConstraintLayout>