<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".P2_Principal">

    <ImageView
        android:id="@+id/imgVw_puppy"
        android:layout_width="147dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@drawable/puppy" />

    <TextView
        android:id="@+id/txtVw_puppy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_titulo_puppy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVw_puppy"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/txtVw_Puppy_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_puntuacion_puppy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_puppy"
        app:layout_constraintVertical_bias="0.024" />

    <ImageView
        android:id="@+id/imgVw_bilbao"
        android:layout_width="131dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@drawable/bilbao" />

    <TextView
        android:id="@+id/txtVw_bilbao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_titulo_guggenheim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVw_bilbao"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/txtVw_Bilbao_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_puntuacion_bilbao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_bilbao"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/imgVw_ayuntamiento"
        android:layout_width="147dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:srcCompat="@drawable/ayuntamiento" />

    <TextView
        android:id="@+id/txtVw_ayuntamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_titulo_ayuntamiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVw_ayuntamiento"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/txtVw_Ayuntamiento_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_puntuacion_ayuntamiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_ayuntamiento"
        app:layout_constraintVertical_bias="0.078" />

    <ImageView
        android:id="@+id/imgVw_artxanda"
        android:layout_width="144dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        app:srcCompat="@drawable/artxanda" />

    <TextView
        android:id="@+id/txtVw_artxanda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_titulo_arxtanda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVw_artxanda"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/txtVw_Artxanda_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_puntuacion_artxanda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_artxanda"
        app:layout_constraintVertical_bias="0.073" />
</androidx.constraintlayout.widget.ConstraintLayout>